// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redirect Component should handle a forced redirect: forced route 1`] = `
<Fragment>
  Replaced
   towards 
  /dolor
</Fragment>
`;

exports[`Redirect Component should handle a forced redirect: forced route, replace 1`] = `[]`;

exports[`Redirect Component should handle a redirect with a url: redirect url 1`] = `
<Fragment>
  Replaced
   towards 
  //lorem/ipsum?dolor=sit
</Fragment>
`;

exports[`Redirect Component should handle forwarding paths: forward path 1`] = `
<Fragment>
  Redirected
   towards 
  /openshift-container
</Fragment>
`;

exports[`Redirect Component should handle missing routes: missing route, component 1`] = `
<Fragment>
  Replaced
   towards 
  /lorem-ipsum
</Fragment>
`;

exports[`Redirect Component should render a basic component: basic 1`] = `
<Fragment>
  Replaced
   towards 
  /openshift-dedicated
</Fragment>
`;
